still not working

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@
     padding: 10px 15px;
     background: var(--tg-theme-button-color);
     color: var(--tg-theme-button-text-color);
-    border: none;
+    border: 5px solid red;
     outline: none;
     cursor: pointer;
 }
