working! 1 space was missing

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@
     padding: 10px 15px;
     background: var(--tg-theme-button-color);
     color: var(--tg-theme-button-text-color);
-    border: 5px solid red;
+    border: none;
     outline: none;
     cursor: pointer;
 }
